--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,13 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.7.2'
+	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.7.2'
+	implementation group: 'javax.inject', name: 'javax.inject', version: '1'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+	implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.19'
+	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 }
 
 tasks.named('test') {
